# llm_query_transport

./: .env  .gitignore  Makefile  README.md  llm_query_app.py  pyproject.toml  requirements.txt
configs/: app_config.yml
data/evaluation/: test_set.json
src/: contexts.py  load_config.py  logs.py  natural_language_transformer.py  sql_query_generator.py  sub_utils.py  utils.py
src/application/services/: chat_orchestrator.py
src/config/: app_config.yml  settings.py
src/config/prompts/: contexts.yml  natural_language_transform.yml  prompt_loader.py  sql_generation.yml
src/domain/: ports.py  schemas.py
src/evaluation/: harness.py  metrics.py  runner.py  visualization.py
src/infrastructure/: config_adapters.py  session_adapters.py
src/infrastructure/database/: postgres_adapter.py
src/infrastructure/llm/: chat_history_collector.py  natural_language_transformer.py  sql_query_generator.py
src/infrastructure/ui/: streamlit_helpers.py  streamlit_orchestrator.py
